[package]
name = "clido"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool for creating and maintaining a todo-list on the command line"
readme = "README.md"
homepage = "https://github.com/Zij-IT/clido"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
clap = "2.33.3"
ron = "0.6.4"
tempfile = "3.1.0"
dirs-next = "2.0.0"
anyhow = "1.0.38"
prettytable-rs = "0.8.0"

