[package]
name = "clido"
version = "0.1.0"
authors = ["Elijah Hartvigsen <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool for creating and maintaining a todo-list on the command line"
readme = "README.md"
homepage = "https://github.com/Zij-IT/clido"
repository = "https://github.com/Zij-IT/clido"
keywords = ["cli", "todo", "todo-list"]
categories = ["command-line-utilties"]

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
clap = "2.33.3"
bincode = "1.3.2"
tempfile = "3.1.0"
dirs-next = "2.0.0"
anyhow = "1.0.38"
prettytable-rs = "0.8.0"

[profile.release]
lto = true
codegen-units = 1

