[package]
name = "clido"
version = "0.3.0"
authors = ["Elijah Hartvigsen <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool for creating and maintaining a todo-list on the command line"
readme = "README.md"
homepage = "https://github.com/Zij-IT/clido"
repository = "https://github.com/Zij-IT/clido"
keywords = ["cli", "todo", "todo-list"]
categories = ["command-line-utilities"]

[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
chrono = {version = "0.4.23", features = ["serde"]}
clap = { version = "4.0.29", features = ["color", "derive"] }
bincode = "1.3.3"
tempfile = "3.3.0"
dirs-next = "2.0.0"
anyhow = "1.0.66"
prettytable-rs = "0.9.0"

[profile.release]
lto = true
codegen-units = 1

